home/namespaced/crossmap-prod/virtualservices.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crossmap-api
  annotations:
    external-dns.alpha.kubernetes.io/target: 91279420-9a62-4119-a0c9-b8a0ef00a087.cfargotunnel.com
spec:
  gateways:
  - istio-gateways/crossmap-app
  hosts:
  - api.crossmap.app
  http:
  - route:
    - destination:
        host: api.crossmap-prod.svc.cluster.local
        port:
          number: 80
